move the context menu into its own little Vue instance

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <div id="vue-context-menu"></div>
   </body>
 </html>
